# MoRAG

./: .env.alpine  .env.backup  .env.example  .env.prod.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  ALPINE-INSTALL-SCRIPT.md  ALPINE-INSTALL-UPDATES.md  ALPINE-INSTALL.md  API_FIXES_SUMMARY.md  API_USAGE_GUIDE.md  BUG_FIXES_SUMMARY.md  CIRCULAR_DEPENDENCY_FIX_SUMMARY.md  CLAUDE.md  CLI-DOCKER.md  CLI.md  CLI_HYBRID_EPISODES.md  COMPETITORS.md  COMPLETED_TASKS.md  COMPLETION_SUMMARY.md  CONTEXT_GENERATION_TESTING.md  COSTS.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_INTEGRATION_COMPLETE.md  DATABASE_INTEGRATION_SUMMARY.md  DEPENDENCY_OPTIMIZATION_COMPLETION_SUMMARY.md  DEPENDENCY_OPTIMIZATION_PLAN.md  DEPLOYMENT.md  DOCKER_FIXES_SUMMARY.md  DOCKER_LOG_FIXES_SUMMARY.md  DOCKER_MODULE_IMPORT_FIX.md  DOCUMENT_PROCESSING_IMPROVEMENTS_SUMMARY.md  DUAL_FORMAT_EXPLANATION.md  Dockerfile  Dockerfile.alpine  Dockerfile.cli  Dockerfile.maintenance  Dockerfile.worker  (+148 more)
agents/: README.md  __init__.py  prompts.yaml  pyproject.toml  requirements.txt  test_simple_import.py
agents/analysis/: __init__.py  content_analysis.py  models.py  query_analysis.py  sentiment_analysis.py  topic_analysis.py
agents/base/: __init__.py  agent.py  config.py  exceptions.py  response_parser.py  template.py
agents/config/: __init__.py  defaults.py  entity_types.py  entity_types.yaml  manager.py  relation_types.py  relation_types.yaml  validation.py
agents/examples/: basic_usage.py  response_parsing_example.py
agents/extraction/: __init__.py  entity_extraction.py  fact_extraction.py  keyword_extraction.py  models.py  relation_extraction.py
agents/factory/: __init__.py  factory.py  registry.py  utils.py
agents/generation/: __init__.py  explanation.py  models.py  response_generation.py  summarization.py  synthesis.py
agents/processing/: __init__.py  chunking.py  classification.py  filtering.py  models.py  semantic_chunking.py  validation.py
agents/reasoning/: __init__.py  context_analysis.py  decision_making.py  models.py  path_selection.py  reasoning.py
agents/tests/: run_all_tests.py  test_analysis_agents.py  test_basic_functionality.py  test_consistency.py  test_extraction_agents.py  test_generation_agents.py  test_processing_agents.py  test_reasoning_agents.py
cli/: GRAPHITI_CLI_UPDATES.md  README-test-context-generation.md  README-test-prompt.md  README-test-query.md  batch-process-stages.py  check-system-status.py  common_schema.py  create-databases.py  deduplicate-entities.py  fact-extraction.py  graph_extraction.py  ingest-markdown-folder.py  morag-stages.py  resume_utils.py  stage-status.py  test-all-cli.py  test-all.py  test-audio.py  test-bug-fixes.py  test-cli-fix.py  test-context-generation.py  test-custom-database-retrieval.py  test-docker-fixes.py  test-document-optimized.py  test-document.py  test-embedding-fix.py  test-folder.py  test-graphiti.py  test-image.py  test-ingest-workflow.py  test-ingestion-coordinator.py  test-ingestion-fixes.py  test-intelligent-retrieval.py  test-metadata-null-fix.py  test-openie-integration.py  test-openie.py  test-performance.py  test-prompt.py  test-qdrant-fix.py  test-query.py  (+13 more)
configs/: gpu-worker.env  gpu-worker.env.example  http-worker.env.example
docker/: docker-compose.graph.yml  docker-compose.qdrant.yml  docker-compose.redis.yml
docs/: ARCHITECTURE.md  CELERY_WINDOWS_FIX.md  COMPLETED_TASKS.md  CPU_COMPATIBILITY.md  DATABASE_INTEGRATION.md  DEVELOPMENT_GUIDE.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_DEPLOYMENT.md  GPU_WORKERS_IMPLEMENTATION_SUMMARY.md  GPU_WORKER_SETUP.md  HTTP_REMOTE_WORKERS.md  PROGRESS_REPORTING.md  REMOTE_GPU_WORKERS.md  RETRY_CONFIGURATION.md  SIMPLIFIED_ARCHITECTURE.md  TEMP_DIRECTORY_FIXES.md  UNIVERSAL_DOCUMENT_CONVERSION.md  alpine-deployment.md  api_usage.md  atomic-ingestion-solution.md  batch-embedding.md  docker-dependencies.md  enhanced-audio-processing.md  fact-filtering-strategies.md  gpu-cpu-fallback.md  hybrid-entity-extraction.md  hybrid-fact-extraction.md  installation-comparison.md  intelligent-retrieval-custom-databases.md  llm-batch-processing.md  model-configuration.md  network-requirements.md  page-based-chunking.md  remote-conversion-system.md  remote-workers-setup.md  web-scraping.md
examples/: README.md  ai_error_handling_demo.py  api_demo.py  context_generation_demo.py  enhanced_audio_processing_demo.py  enhanced_relation_extraction_demo.py  gpu_cpu_fallback_demo.py  http_remote_worker_demo.py  openie_enhanced_extraction.py  page_based_chunking_demo.py  progress_reporting_demo.py  pydantic_ai_foundation_demo.py  test_medical_text.md  transcript.json  transcript.txt  transcript2.json  transcript2.txt  transcript3.json  transcript3.txt  transcript4.json  transcript4.txt  transcript_extracted.json  transcription_fixes_demo_alt.py  universal_conversion_demo_alt.py  universal_converter_demo.py  video_audio_integration_demo.py  video_transcript_fix_demo.py  web_scraping_demo.py
k8s/: deployment.yaml
llm/: AGENTS.md  CHUNKING.md  CONTEXT.md  DIFF.md  EMBEDDINGS.md  EXTRACTION.md  FACT_SYNTHESIS.md  GRAPH_OPERATIONS.md  MARKDOWN.md  PROMPTS.md  REASONING.md
maintenance/: ISOLATED_NODES_CLEANUP.md  KEYWORD_DEDUPLICATION.md  KEYWORD_HIERARCHIZATION.md  KEYWORD_LINKING.md  RELATIONSHIP_CLEANUP.md  REVIEW.md
mock/: README.md
nginx/: nginx.conf
refactor/: 01-quick-fixes.md  02-file-splitting.md  03-deduplication.md  04-dependency-cleanup.md  05-testing-strategy.md  99-postponed.md  README.md
related_work/: README.md  adaptive_rag_comparison.md  advanced_dspy_qa_marktechpost_comparison.md  advanced_langgraph_multi_agent_pipeline_marktechpost_comparison.md  agentic_rag_survey_comparison.md  cognee_comparison.md  comparison_morag_vs_human_thought_rag.md  elysia_comparison.md  entity_relation_extraction_improvements.md  graph_agent_framework_with_gemini_marktechpost_comparison.md  graphrag_comparison.md  graphrag_survey_comparison.md  inraexplorer_comparison.md  kg2rag_comparison.md  langchain_baml_fuzzy_parsing_comparison.md  lightrag_comparison.md  weknora_comparison.md
(+608 files in other folders)
