[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morag"
version = "0.1.0"
description = "Multimodal RAG Ingestion Pipeline"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "qdrant-client>=1.7.0",
    "google-genai>=0.3.0",
    "unstructured>=0.11.0",
    "spacy>=3.7.0",
    "yt-dlp>=2023.12.30",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "html2text>=2024.2.26",
    "lxml>=4.9.3",
    "bleach>=6.1.0",
    "markdown>=3.5.1",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

docling = [
    "docling>=1.0.0",
]

audio = [
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
]

video = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "moviepy>=1.0.3",
]

image = [
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "opencv-python>=4.8.0",
]

morphik = [
    "morphik>=0.1.0",
]

milvus = [
    "pymilvus>=2.3.0",
]

all-extras = [
    "docling>=1.0.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "moviepy>=1.0.3",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "morphik>=0.1.0",
    "pymilvus>=2.3.0",
    "unstructured[all-docs]>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/morag"
Repository = "https://github.com/yourusername/morag"
Documentation = "https://github.com/yourusername/morag/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/morag --cov-report=html --cov-report=term-missing"
